User account email address activation/confirmation #1.
