# BookingWebAPI/BookingWebAPI.Infrastructure/ViewModels/BookingWebAPIUserConfirmationViewModel.cs
@@ -1,0 +1,11 @@
+﻿using BookingWebAPI.Infrastructure.ViewModels;
+
+namespace BookingWebAPI.Common.ViewModels
+{
+    public class BookingWebAPIUserConfirmationViewModel
+    {
+        public BookingWebAPIUserViewModel User { get; set; } = null!;
+
+        public IEnumerable<BookingWebAPISettingViewModel> PasswordSettings { get; set; } = null!;
+    }
+}
