# BookingWebAPI/BookingWebAPI.Infrastructure/ViewModels/BookingWebAPIUserViewModel.cs
@@ -11,5 +11,7 @@
         public string FirstName { get; set; } = null!;
 
         public string LastName { get; set; } = null!;
+
+        public bool EmailConfirmed { get; set; }
     }
 }
