# BookingWebAPI/BookingWebAPI.Infrastructure/ViewModels/Mapping/ViewModelProfile.cs
@@ -14,6 +14,11 @@ namespace BookingWebAPI.Infrastructure.ViewModels.Mapping
             CreateMap<(BookingWebAPIUser, string), BookingWebAPIAuthenticationViewModel>()
                 .ForMember(vm => vm.User, o => o.MapFrom(authInfo => authInfo.Item1))
                 .ForMember(vm => vm.Token, o => o.MapFrom(authInfo => authInfo.Item2));
+            CreateMap<BookingWebAPIUserViewModel, BookingWebAPIUserConfirmationViewModel>()
+                .ForMember(cvm => cvm.User, o => o.MapFrom(uvm => uvm));
+            CreateMap<IEnumerable<BookingWebAPISetting>, BookingWebAPIUserConfirmationViewModel>()
+                .ForMember(cvm => cvm.PasswordSettings, o => o.MapFrom(s => s));
+            CreateMap<BookingWebAPISetting, BookingWebAPISettingViewModel>();
         }
     }
 }
